<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidProximityAlertProject</string>
    <string name="action_settings">Settings</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="name">name</string>
    <string name="save_point">save</string>
    <string name="radius">radius</string>
    <string name="remove">remove</string>
    <string name="autopopulate">autopopulate</string>
    <string name="autopoopulate">autopoopulate</string>

</resources>
